--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <div id="root"></div>
-        <script src="index.pack.js"></script>
+        <script src="index.jsx" type="module"></script>
     </body>
 </html>
